--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -107,8 +107,11 @@
 		 */
 
 		/* Check EULA state. */
-		if (get_cookie("eula") != 1)
-			window.location.href = "../";
+		if (!localStorage.getItem("xdcheckin_eula")
+			if (confirm("This APP provides utilities for Chaoxing check-ins and classroom livestreams exclusively for XDUers.\n\nBy confirming you agree to the following terms:\n    1. This APP is for study use only.\n    2. This work comes with absolutely no warranty.\n\nYou have been warned.")) {
+				localStorage.setItem("xdcheckin_eula", "1");
+				document.getElementById("main-body").style.display = "block";
+			}
 		else
 			document.getElementById("main-body").style.display = "block";
 
