--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -313,8 +313,8 @@
 		}
 
 		/* Div listing toggle. */
-		function listDiv(div_id) {
-			let e = document.getElementById(div_id);
+		function listDiv(e_id) {
+			let e = document.getElementById(e_id);
 			e.style.display = ((e.style.display == "none") ? "block" : "none");
 		}
 
