--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -122,9 +122,9 @@
 		var xdcheckin_version = "0.0.0";
 		var xdcheckin_latest_release = {};
 		var xdcheckin_update_available = false;
-		get("/xdcheckin/get/version").then((res) => {
+		post("/xdcheckin/get/version").then((res) => {
 			assert(xdcheckin_version = res.text);
-			get("/xdcheckin/get/releases/latest").then((res) => {
+			post("/xdcheckin/get/releases/latest").then((res) => {
 				assert(Object.keys(xdcheckin_latest_release = res.json()).length);
 				let xdcheckin_version_arr = xdcheckin_version.split(".");
 				let xdcheckin_latest_release_version_arr = xdcheckin_latest_release["tag_name"].split(".");
@@ -382,7 +382,7 @@
 			if (e.style.display == "none") {
 				e.innerText = "Loading activities.";
 				e.style.display = "block";
-				let activities = (await get("/chaoxing/get_activities")).json();
+				let activities = (await post("/chaoxing/get_activities")).json();
 				e.replaceChildren();
 				for (let class_id in activities) {
 					let class_activities = activities[class_id];
@@ -586,11 +586,11 @@
 			alert("Logged in successfully.");
 			localStorage.setItem("chaoxing_username", username);
 			localStorage.setItem("chaoxing_password", password);
-			localStorage.setItem("chaoxing_cookies", (await get("/chaoxing/get_cookies")).text);
-			localStorage.setItem("chaoxing_fid", (await get("/chaoxing/get_fid")).text);
+			localStorage.setItem("chaoxing_cookies", (await post("/chaoxing/get_cookies")).text);
+			localStorage.setItem("chaoxing_fid", (await post("/chaoxing/get_fid")).text);
 			enablePlayers();
-			courses = (await get("/chaoxing/get_courses")).json();
-			curriculum = (await get("/chaoxing/get_curriculum")).json();
+			courses = (await post("/chaoxing/get_courses")).json();
+			curriculum = (await post("/chaoxing/get_curriculum")).json();
 			tablifyCurriculum();
 			document.getElementById("extract-classroom-button").style.display = "inline";
 			document.getElementById("chaoxing-login-button").style.display = "none";
