--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/aliplayer-min.js"></script>
 	<script type="text/javascript" src="static/classrooms.js"></script>
 	<script type="text/javascript" src="https://xdcheckin.git.pnxlr.eu.org/src/backend/static/classrooms.js"></script>
-	<script type="text/javascript" src="xdcheckin/get/locations.js"></script>
+	<script type="text/javascript" src="xdcheckin/static/locations.js"></script>
 
 	<head>
 		<style>
