--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -459,7 +459,7 @@
 			chaoxingLogin.calling = false;
 		}
 
-		/* Get curriculum. */
+		/* Tablify curriculum. */
 		function tablifyCurriculum() {
 			let table = document.createElement("table");
 			table.border = "1";
