--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -539,7 +539,7 @@
 
 		/* Take video screenshot. */
 		function screenshot(video) {
-			let canvas = document.createElement('canvas');
+			let canvas = document.createElement("canvas");
 			canvas.width = video.videoWidth;
 			canvas.height = video.videoHeight;
 			let ctx = canvas.getContext("2d");
