--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -479,7 +479,7 @@
 				tableBody.appendChild(tr);
 			}
 			table.appendChild(tableBody);
-			document.getElementById("curriculum-list-div").replaceChilden(table);
+			document.getElementById("curriculum-list-div").replaceChildren(table);
 		}
 
 		/* Get activities. */
